--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@
     .nav-container {
       /* flex-direction: column; */
       align-items: stretch;
+      padding: 5px 50px;
     }
   
     .nav-left
